test/fails/bad_functions/arguments1.lgl
int f(int x) {
    return x;
}

void main() {
    print f(true);
    return;
}